# electec

.devcontainer/: Dockerfile  devcontainer.json
backend/: .env.dist  .gitignore  README.md  init_db.py  pyproject.toml
backend/app/: server.py
backend/app/agents/graphs/: __init__.py  tool_node.py
backend/app/agents/sql_assistant/: sql_assitant.py
backend/app/tests/: sql_assistant_bot_test.py
